<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/page_1"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/srp_number_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/srp_input" />

    <EditText
        android:id="@+id/srp_region_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/srp_number_input"
        android:hint="@string/srp_number_input"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/srp_number_input"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_button"
            android:layout_marginEnd="60dp"/>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"/>

    </LinearLayout>

</RelativeLayout>